<resources>

    <string name="app_name">Trackers</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Trackers</string>
    <string name="shopping_list">Shopping List</string>
    <string name="health_metrics">Health Metrics</string>
    <string name="workout">Workout</string>
    <string name="title_activity_slmain">Shopping List</string>
    <string name="menu_new">New</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_ok">OK</string>
    <string name="menu_view_price_graph">View Price Graph</string>
    <string name="title_activity_sledit_item">Edit Item</string>
    <string name="sl_name_label">Name:</string>
    <string name="sl_name_hint">The name of the item</string>
    <string name="sl_price_label">Price:</string>
    <string name="sl_price_hint">How much it costs</string>
    <string name="sl_quantity_label">Quantity:</string>
    <string name="sl_quantity_hint">The number of items</string>
    <string name="sl_email_list">Email List</string>
    <string name="num_one">1</string>
    <string name="nine_nine">99</string>
    <string name="one_dollar">$1.00</string>
    <string name="minus_sign">-</string>
    <string name="plus_sign">+</string>

    <!--Workout-->
    <string name="menu_new_profile">New</string>
    <string name="menu_delete_profile">Delete</string>
    <string name="menu_send_mail">Email Workouts</string>
    <string name="menu_graph">Graph progress</string>    
    <string name="label_exercise">Exercise</string>
    <string name="label_reps">Repitions</string>
    <string name="label_weight">Weight/Time</string>    
    <string name="hint_exercise">Enter Exercise Name</string>
    <string name="hint_weight">Enter Weight OR time</string>   
    <string name="hint_reps">Enter repititons</string>
    <string name="label_sets">Sets</string>
    <string name="hint_sets">Enter Sets</string>
    <string name="label_date">Date</string>
    <string name="hint_date">Enter Date</string>  
    <string name="title_activity_workout_info">Test Activity</string>
    <string name="delete_message">Delete workout?</string>
    <string name="delete">Delete</string>    
    <string name="cancel">Cancel</string>            
    <string name="chose_date">Chose Date</string>        
    
     <!--Email-->
    <string name="email_message">Send Email To:</string>
    <string name="ok_email">OK</string>
		
	<!--Health Metrics -->
	<!--<string name="app_name">HealthMetrics</string>-->
    <string name="title_activity_health_metrics">HealthMetrics</string>
    <string name="Cholesterol">Cholesterol</string>
    <string name="BloodPressure">Blood Pressure</string>
    <string name="Sugar">Sugar</string>
    <string name="HeartRate">Heart Rate</string>
    <string name="Temperature">Temperature</string>
    <string name="Home">Home</string>
    <string name="Graph">Graph</string>
    <string name="Check">Check</string>
    <string name="title_activity_display_metric">DisplayMetric</string>
    <string name="Reading">Reading</string>
    <string name="Date">Date</string>
    <string name="aa">Home</string>
    <string name="bb">Check</string>
    <string name="DeleteAll">DeleteAll</string>
    <string name="Done">Done</string>
    <string name="green">G</string>
    <string name="agePrompt">Enter your age</string>
    <string name="title_activity_display_check">Check Metrics</string>
    <string name="title_activity_graph">GraphActivity</string>
</resources>