<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dip" >
   </TableRow>
        
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dip" >   
        
        <TextView     
            android:id="@+id/textView2"
            android:text="@string/label_exercise"
            android:textSize="24sp" />
    </TableRow>    
    
    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dip" >          
        <EditText
            android:id="@+id/exercise"
            android:ems="10"
            android:hint="@string/hint_exercise"
            android:inputType="textPersonName"
            android:textSize="14sp" />
     </TableRow>
     
     <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dip" >   
        
        <TextView     
            android:id="@+id/textView4"
            android:paddingTop="20dp"            
            android:text="@string/label_weight"
            android:textSize="24sp" />
    </TableRow>    
    
    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dip" >          
        <EditText
            android:id="@+id/weight"
            android:paddingTop="20dp"           
            android:ems="10"
            android:hint="@string/hint_weight"
            android:inputType="number"
            android:textSize="14sp" />
     </TableRow>
           
        
    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dip" >  
        <TextView
            android:id="@+id/textView1"
            android:paddingTop="20dp"
            android:text="@string/label_sets"
            android:layout_weight="0.5"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView3"
            android:paddingTop="20dp"
            android:text="@string/label_reps"
            android:layout_weight="0.5"
            android:textSize="24sp" />   
    </TableRow>
        
    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dip" >  
        <EditText
            android:id="@+id/sets"
            android:ems="10"
            android:hint="@string/hint_sets"
            android:nextFocusDown="@+id/reps"            
            android:inputType="number"
            android:layout_weight="0.5" 
            android:textSize="14sp" />

       <EditText
            android:id="@+id/reps"
            android:ems="10"
            android:hint="@string/hint_reps"          
            android:layout_weight="0.5"  
            android:inputType="number"
            android:textSize="14sp" />
     </TableRow>
    
     <TableRow
        android:id="@+id/tableRow8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dip" >  
        <TextView
            android:id="@+id/textView8"
            android:layout_marginTop="18dp"
            android:paddingTop="20dp"
            android:text="@string/label_date"
            android:textSize="24sp" />
    </TableRow>
        
    <TableRow
        android:id="@+id/tableRow9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dip" >  
    <EditText
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_date"
        android:layout_weight="0.5"        
        android:inputType="datetime"
        android:textSize="14sp" />
    
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"        
        android:text="@string/chose_date" />
    </TableRow>
    
</TableLayout>