<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10sp" >
    
    <TextView android:id="@+id/sl_row_quantity"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:gravity="left" 
        android:text="@string/num_one" />
    
    <TextView android:id="@+id/sl_row_name"
        android:layout_weight="5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/hello_world" />
    
    <TextView android:id="@+id/sl_row_price"
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:gravity="left"
        android:text="@string/one_dollar" />
    

</TableRow>